[package]
name = "subway"
version = "0.1.2"
authors = ["sushrutshivaswamy"]
repository = "https://github.com/sushrut141/subway"
edition = "2018"
description = """
Fast, performant in-memory SkipList implemented in Rust.
"""
license = "MIT"
keywords = ["list", "sorted", "skiplist"]
categories = ["algorithms", "data-structures", "caching"]

[dependencies]
rand = "0.5.5"
